Imagenes corregidas. Un minijuego añadido.

--- a/src/Interfaz/Lienzo.form
+++ b/src/Interfaz/Lienzo.form
@@ -449,6 +449,9 @@
       </Layout>
     </Container>
     <Component class="Interfaz.HistoriaKatherin" name="historiaKatherin">
+      <Events>
+        <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="historiaKatherinFocusGained"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignCardLayout" value="org.netbeans.modules.form.compat2.layouts.DesignCardLayout$CardConstraintsDescription">
           <CardConstraints cardName="KATes"/>
